--- a/package.json
+++ b/package.json
@@ -7,10 +7,22 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@tailwindcss/postcss7-compat": "^2.2.7",
+    "autoprefixer": "9",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "postcss": "7",
     "register-service-worker": "^1.7.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^2.6.11",
+    "vue-route-middleware": "^1.0.7",
     "vue-router": "^3.2.0",
+    "vue-top-progress": "^0.7.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
