--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/postcss7-compat": "^2.2.7",
     "autoprefixer": "9",
     "axios": "^0.21.1",
@@ -20,9 +21,9 @@
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^2.6.11",
+    "vue-google-charts": "^0.3.3",
     "vue-route-middleware": "^1.0.7",
     "vue-router": "^3.2.0",
-    "vue-top-progress": "^0.7.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
