--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-google-charts": "^0.3.3",
     "vue-route-middleware": "^1.0.7",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "bootstrap-vue": "^2.15.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -32,6 +33,8 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2"
   }
 }
