--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-google-charts": "^0.3.3",
     "vue-route-middleware": "^1.0.7",
     "vue-router": "^3.2.0",
+    "vue-simple-alert": "^1.1.1",
     "vuex": "^3.4.0",
     "bootstrap-vue": "^2.15.0"
   },
