--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
+    "vue-charts": "^0.2.1",
     "postcss": "7",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
